umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_openbabel_razinger_fig7_29.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 9
bond_count: 9
sum_formula: C6ClO2
graph6: HhEGI?O
