umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_openbabel_razinger_fig7_49.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 11
bond_count: 12
sum_formula: C11
graph6: JhEI?C@GG@?
